# vaultech-cloud-final

./: .gitignore  Dockerfile  pyproject.toml
api/: Dockerfile  README.md  pyproject.toml  reference_times.json  validation_expected.json  validation_pieces.csv
api/scripts/: build_validation.py
api/src/: app.py  causes.py  diagnose.py
api/tests/: test_diagnose.py
app/: streamlit_app.py
deploy/: README.md  deploy_sagemaker.py  ecs-task-definition.json
infra/: docker-compose.yml
models/: model_metadata.json  xgboost_bath_predictor.json
notebooks/: 00_explore_data.ipynb  01_bronze_to_silver.ipynb  02_silver_to_gold.ipynb  03_build_clean_dataset.ipynb  04_analyze_per_matrix.ipynb  05_feature_selection_and_model.ipynb
solutions/: build_diagram.py  demo_video_script.md  final_exam.md  repos.md
src/vaultech_analysis/: inference.py
